fix container build

--- a/.github/workflows/build_container_image.yml
+++ b/.github/workflows/build_container_image.yml
@@ -33,6 +33,6 @@ jobs:
   
       - name: Build and push Docker image
         run: |
-          docker build -t ${{ env.TARGET_IMAGE_NAME }}:${{ env.SOURCE_IMAGE_TAG }} -f vaultwarden_cust/dockerfile vaultwarden_cust
-          docker push ${{ secrets.VAULTWARDEN_REGISTRY_URL }}/${{ env.TARGET_IMAGE_NAME }}:1.30.5-alpine
+          docker build -t ${{ secrets.VAULTWARDEN_REGISTRY_URL }}/${{ env.TARGET_IMAGE_NAME }}:${{ env.SOURCE_IMAGE_TAG }} -f vaultwarden_cust/dockerfile vaultwarden_cust
+          docker push ${{ secrets.VAULTWARDEN_REGISTRY_URL }}/${{ env.TARGET_IMAGE_NAME }}:${{ env.SOURCE_IMAGE_TAG }}
       
