--- a/vaultwarden_cust/dockerfile
+++ b/vaultwarden_cust/dockerfile
@@ -2,5 +2,6 @@ FROM vaultwarden/server:1.30.5-alpine
 
 # overwrite original start.sh
 COPY start.sh /start.sh
+RUN chmod u+x /start.sh
 
 # docker run -d --name vaultwarden -v /vw-data/:/data_back/ -p 8080:80 vaultwarden/server:1.30.5-alpine
