--- a/vaultwarden_cust/dockerfile
+++ b/vaultwarden_cust/dockerfile
@@ -1,7 +1,8 @@
-FROM vaultwarden/server:1.30.5-alpine
+ARG tag
+FROM vaultwarden/server:$tag
 
 # overwrite original start.sh
-COPY start.sh /start.sh
-RUN chmod u+x /start.sh
+# COPY start.sh /start.sh
+# RUN chmod u+x /start.sh
 
 # docker run -d --name vaultwarden -v /vw-data/:/data_back/ -p 8080:80 vaultwarden/server:1.30.5-alpine
